k8s/base/resources/srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-srv
  labels:
    app: app-srv
    kind: app
spec:
  selector:
    matchLabels:
      app: app-srv
  replicas: 1
  template:
    metadata:
      labels:
        app: app-srv
    spec:
      containers:
        - name: app-srv
          image: myapp-srv-me
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "1000Mi"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: app-srv
spec:
  selector:
    app: app-srv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
---
