k8s/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  tls:
    - hosts:
        - "4sh-formation-me.quatre.app"
      secretName: my-training-me-cert
  rules:
    - host: 4sh-formation-me.quatre.app
      http:
        paths:
          - path: /api/
            backend:
              serviceName: app-srv
              servicePort: 80
          - path: /
            backend:
              serviceName: app-ui
              servicePort: 80
---
